Corregir texto en 'index' y 'README'

--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
             <p class="answer answer-grid">
               <span>1. SEO.</span>
               <span>2. UX/UI.</span>
-              <span>3. Velocidad y rendimiento.</span>
+              <span>3. Velocidad.</span>
               <span>4. Accesibilidad.</span>
             </p>
           </details>
