Añadir nuevo checkbox en el área de SEO: apple-touch-icon

--- a/seo.html
+++ b/seo.html
@@ -109,6 +109,15 @@
           </li>
 
           <li>
+            <input type="checkbox" name="checkbox" id="checkbox-apple" class="checkbox">
+            <label for="checkbox-apple">
+              <span>apple touch icon</span> ¿Está presente el apple-touch-icon en formato png y con un tamaño mínimo de
+              180x180 píxeles? Este icono permite que los usuarios de dispositivos Apple añadan el sitio a su pantalla
+              de inicio.
+            </label>
+          </li>
+
+          <li>
             <input type="checkbox" name="checkbox" id="checkbox-og" class="checkbox">
             <label for="checkbox-og">
               <span>og y twitter</span> ¿Están presentes las etiquetas og (Open Graph) y twitter? ¿La imagen de
