Corregir textos en página 'SEO'

--- a/seo.html
+++ b/seo.html
@@ -112,7 +112,7 @@
             <input type="checkbox" name="checkbox" id="checkbox-apple" class="checkbox">
             <label for="checkbox-apple">
               <span>apple touch icon</span> ¿Está presente el apple-touch-icon en formato png y con un tamaño mínimo de
-              180x180 píxeles? Este icono permite que los usuarios de dispositivos Apple añadan el sitio a su pantalla
+              180x180 píxeles? Este ícono permite que los usuarios de dispositivos Apple añadan el sitio a su pantalla
               de inicio.
             </label>
           </li>
@@ -121,7 +121,7 @@
             <input type="checkbox" name="checkbox" id="checkbox-og" class="checkbox">
             <label for="checkbox-og">
               <span>og y twitter</span> ¿Están presentes las etiquetas og (Open Graph) y twitter? ¿La imagen de
-              portada tiene un tamaño de 1200 x 630 px? Estas etiquetas mejoran la visibilidad y apariencia del
+              portada tiene un tamaño de 1200x630 píxeles? Estas etiquetas mejoran la visibilidad y apariencia del
               contenido en redes sociales.
             </label>
           </li>
@@ -130,7 +130,7 @@
             <input type="checkbox" name="checkbox" id="checkbox-robots" class="checkbox">
             <label for="checkbox-robots">
               <span>robots.txt</span> ¿Existe un archivo robots.txt en la raíz del sitio? Este archivo indica a los
-              rastreadores de los buscadores a qué URLs del sitio pueden acceder.
+              motores de búsqueda a qué URLs del sitio pueden acceder.
             </label>
           </li>
 
