--- a/ux-ui-practicas-de-usabilidad.html
+++ b/ux-ui-practicas-de-usabilidad.html
@@ -68,7 +68,7 @@
             <input type="checkbox" name="checkbox" id="checkbox-font-family" class="checkbox">
             <label for="checkbox-font-family">
               <span>Familia tipográfica</span> ¿Se utiliza una familia tipográfica consistente, preferiblemente Sans
-              Serif? Esto mejora la legibilidad.
+              Serif? Esto garantiza una lectura más cómoda.
             </label>
           </li>
 
@@ -76,24 +76,21 @@
             <input type="checkbox" name="checkbox" id="checkbox-text-align" class="checkbox">
             <label for="checkbox-text-align">
               <span>Alineación del texto</span> ¿Se cuida la alineación del texto? Preferiblemente a la izquierda.
-              Esto
-              mejora la legibilidad.
+              Esto facilita el flujo natural de lectura.
             </label>
           </li>
 
           <li>
             <input type="checkbox" name="checkbox" id="checkbox-font-size" class="checkbox">
             <label for="checkbox-font-size">
-              <span>Tamaño mínimo del texto</span> ¿El texto tiene un tamaño mínimo de 1rem o 16px? Esto mejora la
-              legibilidad.
+              <span>Tamaño mínimo del texto</span> ¿El texto tiene un tamaño mínimo de 1rem (16px)? Esto garantiza que el contenido sea fácilmente visible, incluso en pantallas pequeñas.
             </label>
           </li>
 
           <li>
             <input type="checkbox" name="checkbox" id="checkbox-line-height" class="checkbox">
             <label for="checkbox-line-height">
-              <span>Altura de línea del texto</span> ¿El texto tiene una altura de línea definida (line-height)? Esto
-              mejora la legibilidad.
+              <span>Altura de línea del texto</span> ¿El texto tiene una altura de línea definida (line-height)? Esto proporciona suficiente espacio entre las líneas, evitando la fatiga visual.
             </label>
           </li>
 
@@ -101,8 +98,7 @@
             <input type="checkbox" name="checkbox" id="checkbox-content" class="checkbox">
             <label for="checkbox-content">
               <span>Grandes bloques de texto</span> ¿Se dividen grandes bloques de texto en párrafos más pequeños?
-              Esto
-              facilita la lectura.
+              Esto permite escanear el contenido rápidamente.
             </label>
           </li>
 
@@ -118,8 +114,7 @@
             <input type="checkbox" name="checkbox" id="checkbox-color" class="checkbox">
             <label for="checkbox-color">
               <span>Color</span> ¿Se mantiene un equilibrio de color? (base, primario, secundario, acento). Esto
-              mejora
-              la estética y la claridad del diseño.
+              mejora la estética y la claridad del diseño.
             </label>
           </li>
 
@@ -158,8 +153,7 @@
             <input type="checkbox" name="checkbox" id="checkbox-distinction-buttons" class="checkbox">
             <label for="checkbox-distinction-buttons">
               <span>Botones</span> ¿Existe una distinción entre el botón primario, secundario y terciario? Esto ayuda
-              a
-              identificar las acciones principales.
+              a identificar las acciones principales.
             </label>
           </li>
 
@@ -182,7 +176,7 @@
           <li>
             <input type="checkbox" name="checkbox" id="checkbox-intrusive-modals" class="checkbox">
             <label for="checkbox-intrusive-modals">
-              <span>Ventanas emergentes</span> ¿Se evita mostrar ventanas emergentes a los visitantes? Esto reduce
+              <span>Ventanas emergentes</span> ¿Se evita mostrar ventanas emergentes de manera repentina a los visitantes? Esto reduce
               distracciones innecesarias.
             </label>
           </li>
@@ -214,8 +208,7 @@
           <li>
             <input type="checkbox" name="checkbox" id="checkbox-adaptability" class="checkbox">
             <label for="checkbox-adaptability">
-              <span>Dispositivos</span> ¿La interfaz se adapta correctamente a todos los dispositivos? (PC, Notebook,
-              Tablet, móvil). Esto mejora la experiencia en cualquier pantalla.
+              <span>Adaptación a distintos dispositivos</span> ¿La interfaz se adapta correctamente a distintos dispositivos? (PC, Notebook, Tablet, móvil). Esto mejora la experiencia en cualquier pantalla.
             </label>
           </li>
 
