Agregar nuevo checkbox en el área Prácticas de usabilidad: 'Enlaces que abren nuevas pestañas'

--- a/ux-ui-practicas-de-usabilidad.html
+++ b/ux-ui-practicas-de-usabilidad.html
@@ -193,7 +193,14 @@
           <li>
             <input type="checkbox" name="checkbox" id="checkbox-links" class="checkbox">
             <label for="checkbox-links">
-              <span>Enlaces</span> ¿Los enlaces funcionan correctamente? Esto evita frustraciones para el usuario.
+              <span>Enlaces - funcionamiento</span> ¿Todos los enlaces están funcionando correctamente y llevan al destino esperado? Esto evita frustraciones para el usuario.
+            </label>
+          </li>
+
+          <li>
+            <input type="checkbox" name="checkbox" id="checkbox-links-target-blank" class="checkbox">
+            <label for="checkbox-links-target-blank">
+              <span>Enlaces que abren nuevas pestañas</span> ¿Los enlaces que abren nuevas pestañas con target="_blank" incluyen el atributo rel="noopener noreferrer"? Esto protege al usuario contra riesgos de seguridad y mejora el rendimiento.
             </label>
           </li>
 
