Modificar texto en checkbox 'Enlaces que abren nuevas pestañas'

--- a/ux-ui-practicas-de-usabilidad.html
+++ b/ux-ui-practicas-de-usabilidad.html
@@ -200,7 +200,7 @@
           <li>
             <input type="checkbox" name="checkbox" id="checkbox-links-target-blank" class="checkbox">
             <label for="checkbox-links-target-blank">
-              <span>Enlaces que abren nuevas pestañas</span> ¿Los enlaces que abren nuevas pestañas con target="_blank" incluyen el atributo rel="noopener noreferrer"? Esto protege al usuario contra riesgos de seguridad y mejora el rendimiento.
+              <span>Enlaces que abren nuevas pestañas</span> ¿Los enlaces que abren nuevas pestañas con target="_blank" incluyen el atributo rel="noreferrer"? Esto protege al usuario contra riesgos de seguridad y mejora el rendimiento.
             </label>
           </li>
 
