Añadir indicador dinámico de ítems seleccionados y totales en barra de progreso

--- a/seo.html
+++ b/seo.html
@@ -50,10 +50,16 @@
         </a>
         <h1 class="hero-title">SEO</h1>
 
+        <!-- Progress bar -->
         <div class="progress-container">
           <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0"
             aria-label="Barra de progreso de tareas completadas"></div>
-          <strong class="progress-percentage">0%</strong>
+          <div class="number-of-items">
+            <span class="checked-items"><!-- value updated by JS --></span>
+            /
+            <span class="total-items"><!-- value updated by JS --></span>
+          </div>
+          <div class="progress-percentage"><!-- value updated by JS --></div>
         </div>
       </div>
     </section>
