Añadir botón para volver al inicio de la página

--- a/seo.html
+++ b/seo.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="/css/pages-styles.css">
   <!-- Scripts -->
   <script src="/js/progress-bar.js" defer></script>
+  <script src="/js/back-to-top.js" defer></script>
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="/assets/favicon/favicon.png">
   <!-- Facebook -->
@@ -262,6 +263,15 @@
   </main>
 
   <footer class="footer">
+
+    <button class="back-to-top-button" aria-label="Volver arriba">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" aria-hidden="true">
+        <path
+          d="M12 2C17.52 2 22 6.48 22 12C22 17.52 17.52 22 12 22C6.48 22 2 17.52 2 12C2 6.48 6.48 2 12 2ZM13 12H16L12 8L8 12H11V16H13V12Z">
+        </path>
+      </svg>
+    </button>
+
     <div class="container">
       <p>Sitio Web desarrollado <br> por Luciano Treachi</p>
 
