Reemplazar URL de GitHub personal por la del repositorio del proyecto

--- a/velocidad-y-rendimiento.html
+++ b/velocidad-y-rendimiento.html
@@ -263,8 +263,8 @@
       <p>Sitio Web desarrollado <br> por Luciano Treachi</p>
 
       <div class="icons">
-        <a href="https://github.com/LucianoTreachi/"
-          aria-label="Github de Luciano Treachi (se abre en una nueva pestaña)" target="_blank" rel="noreferrer">
+        <a href="https://github.com/LucianoTreachi/optimizador-web"
+          aria-label="Repositorio del proyecto (se abre en una nueva pestaña)" target="_blank" rel="noreferrer">
           <svg class="github-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"
             aria-hidden="true">
             <path
