Corregir textos en página 'Accesibilidad'

--- a/accesibilidad.html
+++ b/accesibilidad.html
@@ -131,8 +131,9 @@
           <li>
             <input type="checkbox" name="checkbox" id="checkbox-visible-focus" class="checkbox">
             <label for="checkbox-visible-focus">
-              <span>Foco visible</span> ¿El foco en elementos interactivos es visible? Esto ayuda a identificar dónde
-              está el usuario en la página.
+              <span>Foco visible</span> ¿El foco en los elementos interactivos (botones, enlaces, etc.) es claramente
+              visible? Esto ayuda a los usuarios a navegar por el sitio de manera eficiente, especialmente a aquellos
+              que dependen del teclado o tecnologías de asistencia.
             </label>
           </li>
 
@@ -213,8 +214,8 @@
           <li>
             <input type="checkbox" name="checkbox" id="checkbox-touch-targets" class="checkbox">
             <label for="checkbox-touch-targets">
-              <span>Objetivos táctiles</span> ¿Los objetivos táctiles tienen un tamaño mínimo de 44x44 píxeles? Esto
-              facilita la interacción en dispositivos móviles.
+              <span>Objetivos táctiles</span> ¿Los objetivos táctiles (botones, enlaces, etc.) tienen un tamaño mínimo
+              de entre 24x24 y 44x44 píxeles? Esto asegura una interacción cómoda y accesible en dispositivos móviles.
             </label>
           </li>
 
