Corregir textos en página 'SEO'

--- a/seo.html
+++ b/seo.html
@@ -83,7 +83,7 @@
           <li>
             <input type="checkbox" name="checkbox" id="checkbox-title-seo" class="checkbox">
             <label for="checkbox-title-seo">
-              <span>title</span> ¿Está presente el elemento title? ¿tiene entre 30 y 60 caracteres? ¿Es único en
+              <span>title</span> ¿Está presente el elemento title? ¿Tiene entre 30 y 60 caracteres? ¿Es único en
               cada página? ¿Contiene palabras clave? El elemento title aparece en los resultados de búsqueda y es
               esencial para mejorar el posicionamiento y la tasa de clics (CTR).
             </label>
@@ -92,7 +92,7 @@
           <li>
             <input type="checkbox" name="checkbox" id="checkbox-description-seo" class="checkbox">
             <label for="checkbox-description-seo">
-              <span>description</span> ¿Está presente la metaetiqueta description? ¿tiene hasta 160 caracteres? ¿Es
+              <span>description</span> ¿Está presente la metaetiqueta description? ¿Tiene hasta 160 caracteres? ¿Es
               única en cada página? ¿Contiene palabras clave? La descripción aparece en los resultados de búsqueda y es
               esencial para mejorar el posicionamiento y la tasa de clicks (CTR).
             </label>
