Corregir textos en página 'Accesibilidad'

--- a/accesibilidad.html
+++ b/accesibilidad.html
@@ -83,7 +83,7 @@
           <li>
             <input type="checkbox" name="checkbox" id="checkbox-title" class="checkbox">
             <label for="checkbox-title">
-              <span>title</span> ¿Está presente el elemento title? ¿tiene entre 30 y 60 caracteres? ¿Es único en
+              <span>title</span> ¿Está presente el elemento title? ¿Tiene entre 30 y 60 caracteres? ¿Es único en
               cada página? Esto ayuda a entender en qué página estamos.
             </label>
           </li>
