Corregir textos en página 'SEO'

--- a/seo.html
+++ b/seo.html
@@ -102,7 +102,7 @@
             <input type="checkbox" name="checkbox" id="checkbox-canonical" class="checkbox">
             <label for="checkbox-canonical">
               <span>canonical</span> ¿Está presente la etiqueta canonical? ¿Es única en cada página? La etiqueta
-              canonical indica qué URL debe mostrarse en los resultados de búsqueda y ayuda a evitar problemas de
+              canonical indica qué URL se debe mostrar en los resultados de búsqueda y ayuda a evitar problemas de
               duplicación de contenido.
             </label>
           </li>
