--- a/seo.html
+++ b/seo.html
@@ -174,6 +174,15 @@
           </li>
 
           <li>
+            <input type="checkbox" name="checkbox" id="checkbox-title-h1" class="checkbox">
+            <label for="checkbox-title-h1">
+              <span>title y H1</span> ¿El contenido de title y H1 es distinto? Es importante que ambos sean únicos y
+              contengan palabras clave relevantes para evitar duplicación y mejorar el posicionamiento en los motores de
+              búsqueda.
+            </label>
+          </li>
+
+          <li>
             <input type="checkbox" name="checkbox" id="checkbox-unique-content" class="checkbox">
             <label for="checkbox-unique-content">
               <span>Contenido único</span> ¿El contenido de cada página es único y no se repite? El contenido original
