Actualizar párrafo en el footer

--- a/velocidad-y-rendimiento.html
+++ b/velocidad-y-rendimiento.html
@@ -260,7 +260,7 @@
     </button>
 
     <div class="container">
-      <p>Sitio Web desarrollado <br> por Luciano Treachi</p>
+      <p>Un recurso integral desarrollado <br> por Luciano Treachi</p>
 
       <div class="icons">
         <a href="https://github.com/LucianoTreachi/optimizador-web"
