--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
   <footer class="footer">
     <div class="container">
 
-      <p>Sitio Web desarrollado <br> por Luciano Treachi</p>
+      <p>Un recurso integral desarrollado <br> por Luciano Treachi</p>
 
       <div class="icons">
         <a href="https://github.com/LucianoTreachi/optimizador-web"
