Agregar rango de años del sitio web en el footer

--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
 
   <footer class="footer">
     <div class="container">
-
+      <p>&copy; 2024 - 2025</p>
       <p>Un recurso integral desarrollado <br> por Luciano Treachi</p>
 
       <div class="icons">
