--- a/velocidad-y-rendimiento.html
+++ b/velocidad-y-rendimiento.html
@@ -260,6 +260,7 @@
     </button>
 
     <div class="container">
+      <p>&copy; 2024 - 2025</p>
       <p>Un recurso integral desarrollado <br> por Luciano Treachi</p>
 
       <div class="icons">
