Actualizar textos en la sección de Preguntas Frecuentes

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
             </summary>
             <p class="answer">
               Proporciona listas de verificación, herramientas online y extensiones para garantizar que tus sitios o
-              aplicaciones cumplan con los estándares más altos en SEO, diseño, rendimiento y accesibilidad.
+              aplicaciones cumplan con los más altos estándares en SEO, UX/UI, Rendimiento y Accesibilidad.
             </p>
           </details>
 
@@ -328,7 +328,7 @@
             <p class="answer answer-grid">
               <span>1. Explora las áreas de verificación.</span>
               <span>2. Analiza tu página con herramientas externas.</span>
-              <span>3. Mejora tu trabajo usando extensiones recomendadas.</span>
+              <span>3. Mejora tu trabajo usando las extensiones recomendadas.</span>
             </p>
           </details>
 
