Corregir textos en página 'SEO'

--- a/seo.html
+++ b/seo.html
@@ -176,7 +176,7 @@
           <li>
             <input type="checkbox" name="checkbox" id="checkbox-title-h1" class="checkbox">
             <label for="checkbox-title-h1">
-              <span>title y H1</span> ¿El contenido de title y H1 es distinto? Es importante que ambos sean únicos y
+              <span>title y H1</span> ¿El contenido de title y H1 es único? Es importante que ambos sean únicos y
               contengan palabras clave relevantes para evitar duplicación y mejorar el posicionamiento en los motores de
               búsqueda.
             </label>
@@ -201,7 +201,7 @@
           <li>
             <input type="checkbox" name="checkbox" id="checkbox-links-seo" class="checkbox">
             <label for="checkbox-links-seo">
-              <span>Enlaces internos</span> ¿Se incluyen enlaces internos relevantes entre las páginas? Los enlaces
+              <span>Enlaces internos</span> ¿Se incluyen enlaces internos entre las páginas? Los enlaces
               internos optimizan la navegación y ayudan a los motores de búsqueda a entender la estructura del sitio.
             </label>
           </li>
