Corregir textos en página 'UX/UI - Prácticas de usabilidad'

--- a/ux-ui-practicas-de-usabilidad.html
+++ b/ux-ui-practicas-de-usabilidad.html
@@ -177,8 +177,9 @@
           <li>
             <input type="checkbox" name="checkbox" id="checkbox-know-patterns" class="checkbox">
             <label for="checkbox-know-patterns">
-              <span>Patrones conocidos</span> ¿Se utilizan patrones de diseño conocidos? Esto reduce la carga
-              cognitiva.
+              <span>Patrones conocidos</span> ¿Se utilizan patrones de diseño conocidos? Ejemplos: menú hamburguesa,
+              carrito de compras en la esquina superior derecha, icono de lupa para búsqueda. Esto reduce la carga
+              cognitiva y mejora la usabilidad.
             </label>
           </li>
 
@@ -186,8 +187,7 @@
             <input type="checkbox" name="checkbox" id="checkbox-intrusive-modals" class="checkbox">
             <label for="checkbox-intrusive-modals">
               <span>Ventanas emergentes</span> ¿Se evita mostrar ventanas emergentes de manera repentina a los
-              visitantes? Esto reduce
-              distracciones innecesarias.
+              visitantes? Esto reduce distracciones innecesarias.
             </label>
           </li>
 
