Corregir textos en página 'UX/UI - Prácticas de usabilidad'

--- a/ux-ui-practicas-de-usabilidad.html
+++ b/ux-ui-practicas-de-usabilidad.html
@@ -229,7 +229,7 @@
             <input type="checkbox" name="checkbox" id="checkbox-adaptability" class="checkbox">
             <label for="checkbox-adaptability">
               <span>Adaptación a distintos dispositivos</span> ¿La interfaz se adapta correctamente a distintos
-              dispositivos? (PC, Notebook, Tablet, móvil). Esto mejora la experiencia en cualquier pantalla.
+              dispositivos? (PC, Notebook, Tablet, Móvil). Esto mejora la experiencia en cualquier pantalla.
             </label>
           </li>
 
