Corregir texto en página 'Velocidad de Rendimiento', punto: Recursos de terceros

--- a/velocidad-y-rendimiento.html
+++ b/velocidad-y-rendimiento.html
@@ -187,8 +187,8 @@
             <input type="checkbox" name="checkbox" id="checkbox-third-party-resources" class="checkbox">
             <label for="checkbox-third-party-resources">
               <span>Recursos de terceros</span> ¿Se aplican técnicas para minimizar el impacto de recursos de terceros
-              como videos de YouTube y Vimeo, mapas de Google, widgets, etc? Por ejemplo, mostrando una fachada hasta
-              que el usuario interactúe.
+              como videos de YouTube y Vimeo, mapas de Google, widgets, etc? Por ejemplo, una técnica podría ser mostrar
+              una fachada hasta que el usuario interactúe con el recurso.
             </label>
           </li>
 
