Modificar texto en página 'Accesibilidad', checkbox: title

--- a/accesibilidad.html
+++ b/accesibilidad.html
@@ -84,7 +84,7 @@
             <input type="checkbox" name="checkbox" id="checkbox-title" class="checkbox">
             <label for="checkbox-title">
               <span>title</span> ¿Está presente el elemento title? ¿Tiene entre 30 y 60 caracteres? ¿Es único en
-              cada página? Esto ayuda a entender en qué página estamos.
+              cada página? Esto ayuda al usuario a entender en qué página se encuentra.
             </label>
           </li>
 
