Modificar texto en página 'Accesibilidad', checkbox: Etiquetado de secciones

--- a/accesibilidad.html
+++ b/accesibilidad.html
@@ -99,8 +99,8 @@
           <li>
             <input type="checkbox" name="checkbox" id="checkbox-section" class="checkbox">
             <label for="checkbox-section">
-              <span>Secciones</span> ¿Se utiliza aria-label para etiquetar secciones de la página (section)? Esto
-              proporciona más contexto a los lectores de pantalla.
+              <span>Etiquetado de secciones</span> ¿Se utiliza aria-label para etiquetar secciones de la página
+              (section)? Esto proporciona más contexto a los lectores de pantalla.
             </label>
           </li>
 
