Modificar texto en página 'Accesibilidad', checkbox: Encabezados

--- a/accesibilidad.html
+++ b/accesibilidad.html
@@ -115,7 +115,7 @@
           <li>
             <input type="checkbox" name="checkbox" id="checkbox-headings" class="checkbox">
             <label for="checkbox-headings">
-              <span>Encabezados - jerarquía</span> ¿Se respetan los niveles jerárquicos en los encabezados (H1, H2,
+              <span>Orden de Encabezados</span> ¿Se respetan los niveles jerárquicos en los encabezados (H1, H2,
               H3, etc.) sin saltos innecesarios? Esto facilita la comprensión del contenido.
             </label>
           </li>
