Agregar nuevo checkbox en el área Accesibilidad: 'Zoom del navegador'

--- a/accesibilidad.html
+++ b/accesibilidad.html
@@ -138,6 +138,15 @@
           </li>
 
           <li>
+            <input type="checkbox" name="checkbox" id="checkbox-zoom" class="checkbox">
+            <label for="checkbox-zoom">
+              <span>Zoom del navegador</span> ¿El contenido de la página sigue siendo accesible y funcional al aplicar
+              un zoom del 400%? Esto es importante, ya que muchos usuarios con baja visión dependen de esta función para
+              leer y navegar.
+            </label>
+          </li>
+
+          <li>
             <input type="checkbox" name="checkbox" id="checkbox-alt" class="checkbox">
             <label for="checkbox-alt">
               <span>alt</span> ¿Las imágenes importantes tienen una descripción alternativa (alt)? Esto ofrece contexto
