Agregar mayúscula a la palabra 'enlaces', en el área 'Accesibilidad'

--- a/accesibilidad.html
+++ b/accesibilidad.html
@@ -190,7 +190,7 @@
           <li>
             <input type="checkbox" name="checkbox" id="checkbox-icon-buttons" class="checkbox">
             <label for="checkbox-icon-buttons">
-              <span>Botones y enlaces de íconos</span> ¿Los botones y enlaces de íconos tienen el atributo aria-label?
+              <span>Botones y Enlaces de íconos</span> ¿Los botones y enlaces de íconos tienen el atributo aria-label?
               Esto asegura una descripción precisa para el lector de pantalla.
             </label>
           </li>
@@ -198,7 +198,7 @@
           <li>
             <input type="checkbox" name="checkbox" id="checkbox-image-buttons" class="checkbox">
             <label for="checkbox-image-buttons">
-              <span>Botones y enlaces de imagen</span> ¿Los botones y enlaces de imagen tienen el atributo aria-label?
+              <span>Botones y Enlaces de imagen</span> ¿Los botones y enlaces de imagen tienen el atributo aria-label?
               Esto asegura una descripción precisa para el lector de pantalla.
             </label>
           </li>
