Agregar nuevo checkbox en el área SEO: 'Google Analytics

--- a/seo.html
+++ b/seo.html
@@ -264,6 +264,15 @@
             </label>
           </li>
 
+          <li>
+            <input type="checkbox" name="checkbox" id="checkbox-google-analytics" class="checkbox">
+            <label for="checkbox-google-analytics">
+              <span>Google Analytics</span> ¿Está configurado Google Analytics para monitorear el tráfico, el
+              comportamiento de los usuarios y el rendimiento de las páginas? Esto ayuda a medir y ajustar las
+              estrategias de SEO.
+            </label>
+          </li>
+
         </ul>
 
         <button class="clear-checkboxes-btn">Borrar todas las casillas de verificación</button>
