Modificar texto en página 'SEO', checkbox: Encabezados

--- a/seo.html
+++ b/seo.html
@@ -168,7 +168,7 @@
           <li>
             <input type="checkbox" name="checkbox" id="checkbox-headings" class="checkbox">
             <label for="checkbox-headings">
-              <span>Encabezados - Orden</span> ¿Se respeta el orden en los encabezados (H1, H2,
+              <span>Orden de Encabezados</span> ¿Se respeta el orden en los encabezados (H1, H2,
               H3, etc.) sin saltos innecesarios? Esto establece una jerarquía y facilita la comprensión del contenido.
             </label>
           </li>
