Agregar nuevos checkbox en el área SEO: 'title en contenido' Y 'H1 en contenido'

--- a/seo.html
+++ b/seo.html
@@ -183,6 +183,24 @@
           </li>
 
           <li>
+            <input type="checkbox" name="checkbox" id="checkbox-title-content" class="checkbox">
+            <label for="checkbox-title-content">
+              <span>title en contenido</span> ¿Las palabras clave presentes en el elemento &lt;title&gt;
+              también aparecen dentro del contenido visible de la página? Esto refuerza la relevancia del contenido para
+              los motores de búsqueda.
+            </label>
+          </li>
+
+          <li>
+            <input type="checkbox" name="checkbox" id="checkbox-h1-content" class="checkbox">
+            <label for="checkbox-h1-content">
+              <span>H1 en contenido</span> ¿Las palabras clave presentes en el encabezado principal &lt;h1&gt;
+              también aparecen dentro del contenido de la página? Esto mejora la coherencia temática y la optimización
+              SEO.
+            </label>
+          </li>
+
+          <li>
             <input type="checkbox" name="checkbox" id="checkbox-unique-content" class="checkbox">
             <label for="checkbox-unique-content">
               <span>Contenido único</span> ¿El contenido de cada página es único y no se repite? El contenido original
